--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -20,52 +20,51 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <RelativeLayout android:id="@+id/toolbar_banks"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/toolbar_banks"
             android:layout_width="match_parent"
             android:layout_height="46dp"
+            android:orientation="vertical"
             android:paddingBottom="8dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:visibility="visible"
-            xmlns:android="http://schemas.android.com/apk/res/android">
+            android:visibility="visible">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/dividerColor" />
 
-            <TextView
-                android:id="@+id/banktextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:text="@string/date"
-                android:textIsSelectable="false" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/asktextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:text="@string/ask"
-                android:textIsSelectable="false"
-                android:textSize="14dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="36dp"
+                    android:paddingRight="36dp"
+                    android:text="@string/buy"
+                    android:textIsSelectable="false" />
 
-            <TextView
-                android:id="@+id/bidtextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="false"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/asktextView"
-                android:paddingRight="36dp"
-                android:text="@string/bid"
-                android:textSize="14dp" />
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sale"
+                    android:textIsSelectable="false" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="36dp"
+                    android:paddingEnd="36dp"
+                    android:text="@string/date" />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
 
